# FotoEdit

./: .gitignore  AbstractMemory.c  AbstractMemory.h  ArrayMemory.c  ArrayMemory.h  CMakeLists.txt  Color.c  Color.h  ConvertImage.c  Draw.c  FotoEdit.sln  FotoEdit.vcxproj  FotoEdit.vcxproj.filters  GenerateMovie.c  GenerateMovie.h  HeapMemory.c  HeapMemory.h  Image.c  Image.h  Macros.h  Makefile  Memory.h  README.md  exec  main.c
App/: CMakeLists.txt  Makefile
App/Srcs/: CMakeLists.txt
App/inc/: Macros.h
App/src/: Defines.h  Draw.c  Draw.h  GenerateMovie.c  GenerateMovie.h  main.c
LibColor/: CMakeLists.txt
LibColor/inc/: Color.h
LibGenerateMovie/: Draw.c  GenerateMovie.c
LibImage/: CMakeLists.txt
LibImage/inc/: Color.h  Draw.h  GenerateMovie.h  HeapMemory.h  Image.h  LibImage.h  LibImageDefs.h  Memory.h
LibImage/src/: ArrayMemory.c  ArrayMemory.h  Color.c  ConvertImage.c  HeapMemory.c  HeapMemory.h  Image.c  ImagePriv.h  List.h
LibMemory/: HeapMemory.c
